# notes

./: .gitignore  404.html  CLAUDE.md  Dockerfile  Makefile  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
blog/: index.html
blog/2025/07/03/hello-world/: index.html
blog/archive/2025/: index.html
blog/category/general/: index.html
docs/: index.md
docs/blog/posts/: 2025-07-03-hello-world.md
docs/topics/: collaborative-writing.md  knowledge-management.md  note-taking.md
search/: search_index.json
topics/collaborative-writing/: index.html
topics/knowledge-management/: index.html
topics/note-taking/: index.html
